# edu-material-orchestrator

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  edu-materials.example.yaml  pyproject.toml
.github/: RELEASE_CHECKLIST.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish-pypi.yml  release-skill-bundle.yml
docs/: PYPI_PUBLISHING.md
evals/fixtures/: README.md
evals/rubrics/: handout_quality.md
skill/: SKILL.md
skill/agents/: openai.yaml
skill/references/: optional_integrations.md  output_modes.md  qa_checklist.md  schemas.md  workflows.md
skill/scripts/: bootstrap_env.py  common.py  inspect_inputs.py  refresh_mastery.py  run_assignment_analysis.py  run_cram_plan.py  run_grade_submission.py  run_pipeline.py  run_quiz.py  run_review_pack.py  run_variants.py
src/edu_materials/: __init__.py  cli.py  config.py
tests/: conftest.py
tests/helpers/: mock_assignment_adapter.py
tests/integration/: test_assignment_analysis.py  test_course_library_workflow.py  test_markdown_first_cli.py  test_missing_deps_flow.py  test_pdf_to_handout.py  test_pptx_to_handout.py  test_quiz_workflow.py
tests/unit/: test_assignment_models.py  test_assignment_pipeline.py  test_cache_steps.py  test_chunk.py  test_config.py  test_course_library.py  test_dependencies.py  test_detect.py  test_export_markdown.py  test_installers.py  test_models.py  test_packaging.py  test_provider_adapters.py  (+5 more)
tools/: build_skill_bundle.py  check_license_boundary.py  verify_release_artifacts.py
(+62 files in other folders)
